axelor-web/src/main/webapp/css/main.css
/* ... */
[ng\:cloak], [ng-cloak], .ng-cloak {
   display: none;
}

#container {
	left: 0px; right: 0px; top: 41px; bottom: 0px;
	position:	absolute;
}

@media (max-width: 979px) {
header > .navbar-fixed-top {
	position: fixed;
	margin-bottom: 0;
}

header > .navbar-fixed-top .navbar-inner {
	padding: 0;
}
}

.navbar .brand-logo {
	float: left;
}

.navbar .brand-logo img {
	height: 32px;
	margin-top: 4px;
}

header .container-fluid {
	padding: 0 10px;
}

@media (max-width: 767px) {
header .container-fluid {
	padding: 0 10px;
}
header .navbar-fixed-top {
	margin-left: 0;
	margin-right: 0;
}
}

header .navbar .nav-shortcuts > li > a {
	padding: 10px 8px 9px;
}

header .navbar .nav-shortcuts > .divider-vertical {
	margin: 0 4px;
}

header .navbar .nav-shortcuts > li > a > i {
	font-size: 20px;
}

header .navbar .nav-shortcuts > li > a > span {
	vertical-align: top;
}

header .dropdown > ul.dropdown-menu {
    margin: 0;
}

header .dropdown ul.dropdown-menu {
    border-top: 1px solid transparent;
}

header .dropdown-menu:after,
header .dropdown-menu:before {
    border: none;
    content: none !important;
}

header .dropdown-menu {
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

header .navbar-inverse .dropdown-menu {
	background-color: #1b1b1b;
}

header .navbar-inverse .dropdown-menu {
	border-top: 0;
}

header .navbar-inverse .dropdown-menu .divider {
	height: inherit;
	background-color: inherit;
	border-top: 1px solid #111;
	border-bottom: 1px solid #222;
}

header .navbar-inverse .dropdown-menu > li > a {
	color: #999999;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

header .navbar-inverse .dropdown-menu > li > a:hover,
header .navbar-inverse .dropdown-menu > li > a:focus,
header .navbar-inverse .dropdown-submenu:hover > a,
header .navbar-inverse .dropdown-submenu:focus > a {
	background-image: none;
	background-color: #111;
	color: #fff;
}

.fill-parent {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.footer {
	position: absolute;
	left: 0px; right: 0px; bottom: 0px;
	padding-top: 4px;
	background-color: #333;
	color: white;
}

.footer p {
	font-size: smaller;
	margin-bottom: 4px;
	text-shadow: 0 1px 1px #111;
	text-align: center;
}

.loading-counter {
	padding: 4px 8px 6px 8px;
	border-radius: 0px 0px 4px 4px;
}

.blocker-overlay {
	opacity: 0;
}

.blocker-overlay.wait {
	opacity: 1;
	background: rgba(0, 0, 0, 0.5);
	transition: opacity ease 0.4s;
}

.blocker-overlay .blocker-wait {
	display: none;
	position: absolute;
	top: 50%;
	top: calc(50% - 30px);
	width: 100%;
	
	text-align: center;
	font-size: 18px;
	color: white;
}

.blocker-overlay .blocker-spinner {
	margin: auto;
}

.blocker-overlay .blocker-spinner i {
	font-size: 42px;
	-webkit-animation: spin 1.05s infinite linear;
	   -moz-animation: spin 1.05s infinite linear;
	     -o-animation: spin 1.05s infinite linear;
		    animation: spin 1.05s infinite linear;
}

.blocker-overlay.wait .blocker-wait {
	display: block;
}

.spacer {
	height: 1em;
}

/* jQuery UI fixes */
.ui-state-hover * {
  color: inherit !important;
}

.ui-widget {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
	font-size: inherit;
}

.ui-widget-content {
	border: 1px solid #d4d4d4;
}

.ui-dialog,
.ui-datepicker,
.ui-menu {
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.ui-menu {
	z-index: 9999999999 !important;
	border: 1px solid rgba(0, 0, 0, 0.2);
}

.ui-menu .ui-menu-item a.ui-state-focus {
	color: white;
	text-decoration: none;

	border-color: #0081C2;
	background-color: #0081C2;
	background-image: -webkit-linear-gradient(top, #08C, #0077B3);
	background-image:    -moz-linear-gradient(top, #08C, #0077B3);
	background-image:     -ms-linear-gradient(top, #08C, #0077B3);
	background-image:         linear-gradient(top, #08C, #0077B3);
}

.ui-datepicker,
.ui-datepicker * {
	line-height: 1.1em;
}

.ui-datepicker,
.ui-datepicker table {
	font-size: 13px;
}

.ui-datepicker-header {
	background: none;
	border: none;
}

.ui-datepicker .ui-state-default {
	background: none !important;
	border: none !important;
	padding: 4px;
}

.ui-datepicker .ui-state-hover {
	background: #eee !important;
	border: none !important;
}

.ui-datepicker .ui-slider-handle {
	padding: 0;
	border: 1px solid #cccccc !important;
	
	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6) !important;
	background-image:    -moz-linear-gradient(top, #ffffff, #e6e6e6) !important;
	background-image:     -ms-linear-gradient(top, #ffffff, #e6e6e6) !important;
	background-image:      -o-linear-gradient(top, #ffffff, #e6e6e6) !important;
	background-image:         linear-gradient(top, #ffffff, #e6e6e6) !important;
}

.ui-datepicker .ui-slider-handle.ui-state-hover,
.ui-datepicker .ui-state-active {
	color: white !important;
	border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25) !important;
	background-color: #0074CC;

	background-image: -webkit-linear-gradient(top, #08C, #05C) !important;
	background-image:    -moz-linear-gradient(top, #08C, #05C) !important;
	background-image:     -ms-linear-gradient(top, #08C, #05C) !important;
	background-image:      -o-linear-gradient(top, #08C, #05C) !important;
	background-image:         linear-gradient(top, #08C, #05C) !important;
}

.ui-datepicker .ui-state-highlight {
	border: 1px solid #08c !important;
	padding: 3px;
}

.ui-datepicker .ui-datepicker-next-hover,
.ui-datepicker .ui-datepicker-prev-hover {
	top: 2px;
}

.ui-datepicker .ui-datepicker-next-hover {
	right: 2px;
}

.ui-datepicker .ui-datepicker-prev-hover {
	left: 2px;
}

.ui-autocomplete {
	max-height: 200px;
	overflow-y: auto;
	overflow-x: hidden;
}

.ui-widget input,
.ui-widget select,
.ui-widget textarea,
.ui-widget button {
	font-family: inherit;
	font-size: 13px;
}

/* end jQuery UI fixes */

/* Browser fixes */

/* Remove box-shadow from buttons (dotted outline issue in Firefox) */
.btn {
	box-shadow: none !important;
}

.tooltip {
	z-index: 2100;
}
/* ... */

